Fix some layout issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -43,6 +43,7 @@ $container-max-widths: (
 );
 
 $body-bg: #ced4da;
+$grid-gutter-width: 20px;
 
 @import '~bootstrap/scss/bootstrap';
 
