--- a/src/components/SongTitle.css
+++ b/src/components/SongTitle.css
@@ -1,5 +1,6 @@
 .songtitle {
     font-size: 1.2em;
     font-weight: bold;
+    margin-top: 1em;
     margin-bottom: 0.4em;
 }
